--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "gsap": "^3.12.7",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-transition-group": "^4.4.5"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
