--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@gsap/react": "^2.1.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
+    "cssnano": "^7.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "gsap-trial": "^3.12.5",
-    "postcss": "^8.5.2",
-    "prettier": "^3.5.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
