--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "gsap": "^3.12.7",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "remove-markdown": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
